src/main/java/semantic/symbolTable/test/failing/inheritArray.ru
/? InvalidInheritanceException
struct A: Array Bool{}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 17 | No se puede heredar de tipo: Bool |